crates/valen-parser/tests/snapshots/parser__match_range_pattern.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f(x: Int) -> String { match x { 0..=9 => small, _ => big } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [
                Param {
                    name: "x",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 8,
                                        end: 11,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 8,
                                end: 11,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    span: Span {
                        start: 5,
                        end: 11,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "String",
                                generics: [],
                                span: Span {
                                    start: 16,
                                    end: 22,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 16,
                            end: 22,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Match(
                            MatchExpr {
                                scrutinee: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "x",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 31,
                                            end: 32,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                arms: [
                                    MatchArm {
                                        pattern: Range(
                                            RangePattern {
                                                start: Some(
                                                    Int(
                                                        0,
                                                        Span {
                                                            start: 35,
                                                            end: 36,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                end: Some(
                                                    Int(
                                                        9,
                                                        Span {
                                                            start: 39,
                                                            end: 40,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                inclusive: true,
                                                span: Span {
                                                    start: 35,
                                                    end: 40,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        guard: None,
                                        body: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "small",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 44,
                                                            end: 49,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 44,
                                                    end: 49,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 35,
                                            end: 49,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    MatchArm {
                                        pattern: Wildcard(
                                            Span {
                                                start: 51,
                                                end: 52,
                                                file_id: FileId(
                                                    0,
                                                ),
                                            },
                                        ),
                                        guard: None,
                                        body: Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "big",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 56,
                                                            end: 59,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 56,
                                                    end: 59,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 51,
                                            end: 59,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 25,
                                    end: 61,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 23,
                        end: 63,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 63,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
